--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   display: grid;
-  min-height: 100%;
+  min-height: 100vh;
   grid-template-rows: 1fr auto 1fr;
   font-family: var(--ff);
 }
